terraform/modules/gcp_network/nat.tf
resource "google_compute_router_nat" "nat" {
  name                               = "router-nat-${var.env}"
  router                             = google_compute_router.router.name
  region                             = google_compute_router.router.region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"

  log_config {
    enable = true
    filter = "ERRORS_ONLY"
  }
}

# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_address
resource "google_compute_address" "nat_ip_address" {
  name = "nat-ip-${var.env}"
  region = var.region
}
